test/parsing/errors/bad-identifiers.boa
# bad identifiers
_invalid := 0;
0invalid := 0;
inval+id := 0;
